fix layout issues with new themes

--- a/HiveFive.Web/Content/Css/bootstrap-dark.css
+++ b/HiveFive.Web/Content/Css/bootstrap-dark.css
@@ -4500,7 +4500,7 @@ input[type="button"].btn-block {
 
 .nav-link {
 	display: block;
-	padding: 0.5rem 2rem;
+	padding: 0.5rem 1rem;
 }
 
 	.nav-link:hover, .nav-link:focus {
@@ -4523,8 +4523,8 @@ input[type="button"].btn-block {
 
 	.nav-tabs .nav-link {
 		border: 1px solid transparent;
-		border-top-left-radius: 0.25rem;
-		border-top-right-radius: 0.25rem;
+		/*border-top-left-radius: 0.25rem;
+		border-top-right-radius: 0.25rem;*/
 	}
 
 		.nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
@@ -11552,4 +11552,9 @@ a.text-dark:hover, a.text-dark:focus {
 
 .bootstrap-theme-select-moon {
 	display: none !important;
+}
+
+
+.navbar-toggler-icon {
+	background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0,188,140,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
