--- a/HiveFive.Web/Content/Css/bootstrap-light.css
+++ b/HiveFive.Web/Content/Css/bootstrap-light.css
@@ -11778,10 +11778,15 @@ label,
 	border: 1px solid #ccc;
 }
 
+
 .bootstrap-theme-select-sun {
 	display: none !important;
 }
 
 .bootstrap-theme-select-moon {
 	display: inline-block !important;
+}
+
+.navbar-toggler-icon {
+	background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0,140,186,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
